fix: fixed vertical overflows across various files  - switched from h-screen to flex, grow, min-h-screen and h-screen
Also fixed most of the other possible style bugs that could be caused due to these changes
Please notify if you come across any other related bugs

--- a/Web Frontend/src/index.css
+++ b/Web Frontend/src/index.css
@@ -4,6 +4,11 @@
 /* For Dark Mode class  */
 @custom-variant dark (&:where(.dark, .dark *));
 
+html, body, #root{
+  height: 100%;
+  width: 100%;
+}
+
 @theme{
   --breakpoint-tablet: 900px;
   /* Custom Colors */
